Main.tf
terraform {
  backend "s3" {
    bucket = "cloudnat-student-tf-bucket"
    key = "terraform.tfstate"
    region = "us-east-1"
    encrypt = true
  }
}


terraform {
required_providers {
    aws = {
      source = "hashicorp/aws"

    }
  }

  required_version = ">= 0.14.9"
}

provider "aws" {
  region = "us-east-1"
}


# create a vpc

resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "production"
  }
}

# create internet gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = "aws_vpc.prod-vpc.id" 
}

# create a custom route table

resource "aws_route_table" "prod-route-table" {
  vpc_id = "aws_vpc.prod-vpc.id"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "aws_internet_gateway.gw.id"
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = "aws_internet_gateway.gw.id"
  }

  tags = {
    Name = "prod"
  }
}
# create a subnet

resource "aws_subnet" "subnet-1" {
  vpc_id            = "aws_vpc.prod-vpc.id"
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name = "prod-subnet"
  }
}
#create a subnet with route table

resource "aws_route_table_association" "a" {
  subnet_id      = "aws_subnet.subnet-1.id"
  route_table_id = "aws_route_table.prod-route-table.id"
}

# create a security group to allow port 22, 80 and 443

resource "aws_security_group" "allow_web" {
  name        = "allow_web"
  description = "Allow web traffic"
  vpc_id      = "aws_vpc.prod-vpc.id"

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}
# create a network interface 

resource "aws_network_interface" "web-server-nic" {
  subnet_id       = "aws_subnet.subnet-1.id"
  private_ips     = ["10.0.1.50"]
  security_groups = ["aws_security_group.allow_web.id"]
}

#Assign an elastic ip to the network interface

resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = "aws_network_interface.web-server-nic.id"
  associate_with_private_ip = "10.0.1.50"
  depends_on                = ["aws_internet_gateway.gw"]
}

# create Amazon linux server and install/enable apche2

resource "aws_instance" "web-server" {
  ami               = "ami-04ad2567c9e3d7893"
  instance_type     = "t2.micro"
  availability_zone = "us-east-1b"
  key_name          = "third-key"

  network_interface {
    device_index         = 0
    network_interface_id = "aws_network_interface.web-server-nic.id"

  }

  user_data = <<-EOF
              #!/bin/bash
              sudo yum update -y
              sudo yum install httpd -y
              systemctl start httpd
sudo bash -c 'echo your very first webserver > /var/www/html/index.html'
              EOF

  tags = {
    Name = "web-server"
  }
}
